[tool.poetry]
name = "autotest"
version = "0.1.0"
description = ""
authors = ["wangjian <wangjian@yogorobot.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
open-api-sdk = "^3.0.0"
django-simpleui = "^2022.1"
app-codec = "^0.6.52"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
